[gd_scene load_steps=89 format=3 uid="uid://cjmf2r7dnrjoa"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_s1y1w"]
[ext_resource type="Texture2D" uid="uid://d0djok8y1fmuk" path="res://Assets/Player/Player Front Sheet.png" id="1_ssxrb"]
[ext_resource type="Texture2D" uid="uid://d2j6cf5ctielj" path="res://Assets/Player/Player Back Sheet.png" id="3_rn5rk"]
[ext_resource type="Texture2D" uid="uid://bkn51u0pped7v" path="res://Assets/Player/Player Side Sheet.png" id="4_lglax"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://Assets/Font/Schr‚Äùdinger.ttf" id="5_4dpqf"]
[ext_resource type="FontFile" uid="uid://lxeddhw7kru1" path="res://Assets/Font/ARCADECLASSIC.TTF" id="6_cnuly"]
[ext_resource type="Script" path="res://GUI/DialogPopup.gd" id="7_t774x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y7ey0"]
radius = 7.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lh4nm"]
atlas = ExtResource("1_ssxrb")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldt0f"]
atlas = ExtResource("1_ssxrb")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bimn8"]
atlas = ExtResource("1_ssxrb")
region = Rect2(96, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oncf"]
atlas = ExtResource("1_ssxrb")
region = Rect2(144, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_r12od"]
atlas = ExtResource("1_ssxrb")
region = Rect2(192, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr50f"]
atlas = ExtResource("1_ssxrb")
region = Rect2(240, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gi6q"]
atlas = ExtResource("4_lglax")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cn4o"]
atlas = ExtResource("4_lglax")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7kgf"]
atlas = ExtResource("4_lglax")
region = Rect2(96, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh86d"]
atlas = ExtResource("4_lglax")
region = Rect2(144, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_iarf7"]
atlas = ExtResource("4_lglax")
region = Rect2(192, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6au7p"]
atlas = ExtResource("4_lglax")
region = Rect2(240, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr0ly"]
atlas = ExtResource("3_rn5rk")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wcpi"]
atlas = ExtResource("3_rn5rk")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8lui"]
atlas = ExtResource("3_rn5rk")
region = Rect2(96, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e7v4"]
atlas = ExtResource("3_rn5rk")
region = Rect2(144, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtexc"]
atlas = ExtResource("3_rn5rk")
region = Rect2(192, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_f547w"]
atlas = ExtResource("3_rn5rk")
region = Rect2(240, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhymi"]
atlas = ExtResource("1_ssxrb")
region = Rect2(0, 132, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh0mn"]
atlas = ExtResource("1_ssxrb")
region = Rect2(0, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8tt"]
atlas = ExtResource("1_ssxrb")
region = Rect2(48, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_gscc0"]
atlas = ExtResource("1_ssxrb")
region = Rect2(96, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_io5ra"]
atlas = ExtResource("1_ssxrb")
region = Rect2(144, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_47xdb"]
atlas = ExtResource("1_ssxrb")
region = Rect2(192, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d2da"]
atlas = ExtResource("1_ssxrb")
region = Rect2(240, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtknq"]
atlas = ExtResource("1_ssxrb")
region = Rect2(288, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb2r5"]
atlas = ExtResource("1_ssxrb")
region = Rect2(336, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrdam"]
atlas = ExtResource("1_ssxrb")
region = Rect2(384, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_a84t4"]
atlas = ExtResource("1_ssxrb")
region = Rect2(432, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jpcf"]
atlas = ExtResource("1_ssxrb")
region = Rect2(480, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ufcn"]
atlas = ExtResource("1_ssxrb")
region = Rect2(528, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_sojql"]
atlas = ExtResource("1_ssxrb")
region = Rect2(576, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0dfg"]
atlas = ExtResource("1_ssxrb")
region = Rect2(624, 176, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_endsu"]
atlas = ExtResource("1_ssxrb")
region = Rect2(0, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhslk"]
atlas = ExtResource("1_ssxrb")
region = Rect2(48, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcg6l"]
atlas = ExtResource("1_ssxrb")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nepoj"]
atlas = ExtResource("1_ssxrb")
region = Rect2(144, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypboj"]
atlas = ExtResource("1_ssxrb")
region = Rect2(192, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh6fg"]
atlas = ExtResource("1_ssxrb")
region = Rect2(240, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_hya3c"]
atlas = ExtResource("4_lglax")
region = Rect2(0, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8trci"]
atlas = ExtResource("4_lglax")
region = Rect2(48, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jkhn"]
atlas = ExtResource("4_lglax")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5edj"]
atlas = ExtResource("4_lglax")
region = Rect2(144, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t4kv"]
atlas = ExtResource("4_lglax")
region = Rect2(192, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_whf4x"]
atlas = ExtResource("4_lglax")
region = Rect2(240, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkxfh"]
atlas = ExtResource("3_rn5rk")
region = Rect2(0, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnu4o"]
atlas = ExtResource("3_rn5rk")
region = Rect2(48, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ctsv"]
atlas = ExtResource("3_rn5rk")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxe7h"]
atlas = ExtResource("3_rn5rk")
region = Rect2(144, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxvvh"]
atlas = ExtResource("3_rn5rk")
region = Rect2(192, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_73v6y"]
atlas = ExtResource("3_rn5rk")
region = Rect2(240, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2a41"]
atlas = ExtResource("1_ssxrb")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d7cm"]
atlas = ExtResource("1_ssxrb")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrisp"]
atlas = ExtResource("1_ssxrb")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi0ws"]
atlas = ExtResource("1_ssxrb")
region = Rect2(144, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lj5g"]
atlas = ExtResource("1_ssxrb")
region = Rect2(192, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yi7n"]
atlas = ExtResource("1_ssxrb")
region = Rect2(240, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdsdd"]
atlas = ExtResource("1_ssxrb")
region = Rect2(288, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kfdr"]
atlas = ExtResource("1_ssxrb")
region = Rect2(336, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa2yj"]
atlas = ExtResource("4_lglax")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjotm"]
atlas = ExtResource("4_lglax")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak1a8"]
atlas = ExtResource("4_lglax")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb3fg"]
atlas = ExtResource("4_lglax")
region = Rect2(144, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_sucet"]
atlas = ExtResource("4_lglax")
region = Rect2(192, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4duq"]
atlas = ExtResource("4_lglax")
region = Rect2(240, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nic4m"]
atlas = ExtResource("4_lglax")
region = Rect2(288, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d0i1"]
atlas = ExtResource("4_lglax")
region = Rect2(336, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_i78hd"]
atlas = ExtResource("3_rn5rk")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s0us"]
atlas = ExtResource("3_rn5rk")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cur4"]
atlas = ExtResource("3_rn5rk")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq0th"]
atlas = ExtResource("3_rn5rk")
region = Rect2(144, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_13ho7"]
atlas = ExtResource("3_rn5rk")
region = Rect2(192, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6spk"]
atlas = ExtResource("3_rn5rk")
region = Rect2(240, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_hopa8"]
atlas = ExtResource("3_rn5rk")
region = Rect2(288, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ka6h"]
atlas = ExtResource("3_rn5rk")
region = Rect2(336, 44, 48, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_cvxvc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh4nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldt0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oncf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r12od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr50f")
}],
"loop": false,
"name": &"attack_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gi6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cn4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7kgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh86d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iarf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6au7p")
}],
"loop": false,
"name": &"attack_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr0ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wcpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8lui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e7v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtexc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f547w")
}],
"loop": false,
"name": &"attack_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhymi")
}],
"loop": false,
"name": &"damage",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh0mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gscc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io5ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47xdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d2da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtknq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb2r5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrdam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a84t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jpcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ufcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sojql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0dfg")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_endsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhslk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcg6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nepoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypboj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh6fg")
}],
"loop": true,
"name": &"idle_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hya3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8trci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jkhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5edj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t4kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whf4x")
}],
"loop": true,
"name": &"idle_side",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkxfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnu4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ctsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxe7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxvvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73v6y")
}],
"loop": true,
"name": &"idle_up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2a41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d7cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrisp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi0ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lj5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yi7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdsdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kfdr")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa2yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjotm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak1a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb3fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sucet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4duq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nic4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d0i1")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i78hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s0us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cur4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq0th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13ho7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6spk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hopa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ka6h")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_fhvaj"]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8m20s"]
resource_name = "game_over"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wec1n"]
resource_name = "typewriter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/DialogPopup/Dialog/Message:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_111wa"]
_data = {
"damage": SubResource("Animation_fhvaj"),
"game_over": SubResource("Animation_8m20s"),
"typewriter": SubResource("Animation_wec1n")
}

[node name="Player" type="CharacterBody2D"]
process_mode = 3
script = ExtResource("1_s1y1w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_y7ey0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
sprite_frames = SubResource("SpriteFrames_cvxvc")
animation = &"attack_down"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_111wa")
}

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOver" type="ColorRect" parent="UI"]
modulate = Color(1, 1, 1, 0)
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.839216, 0.764706, 0.462745, 1)

[node name="Label" type="Label" parent="UI/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -13.0
offset_right = 53.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 20
text = "GAME OVER!!!"

[node name="LevelUpPopup" type="Popup" parent="UI"]
process_mode = 2
position = Vector2i(90, 15)
size = Vector2i(150, 150)

[node name="Message" type="ColorRect" parent="UI/LevelUpPopup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -71.0
offset_right = 71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.839216, 0.764706, 0.462745, 1)

[node name="Rewards" type="ColorRect" parent="UI/LevelUpPopup/Message"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -37.5
offset_right = 50.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.337255, 0.333333, 1)

[node name="LevelGained" type="Label" parent="UI/LevelUpPopup/Message/Rewards"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthIncreaseGained" type="Label" parent="UI/LevelUpPopup/Message/Rewards"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaIncreaseGained" type="Label" parent="UI/LevelUpPopup/Message/Rewards"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthPickupGained" type="Label" parent="UI/LevelUpPopup/Message/Rewards"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaPickupGained" type="Label" parent="UI/LevelUpPopup/Message/Rewards"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoPickupGained" type="Label" parent="UI/LevelUpPopup/Message/Rewards"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confirm" type="Button" parent="UI/LevelUpPopup/Message"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_4dpqf")
text = "CONTINUE"

[node name="Label" type="Label" parent="UI/LevelUpPopup/Message"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.5
offset_top = 5.0
offset_right = 35.5
offset_bottom = 24.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_cnuly")
theme_override_font_sizes/font_size = 15
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogPopup" type="Popup" parent="UI"]
process_mode = 2
position = Vector2i(10, 90)
size = Vector2i(300, 80)
script = ExtResource("7_t774x")

[node name="Dialog" type="ColorRect" parent="UI/DialogPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.345098, 0.0980392, 0.160784, 1)

[node name="NPC" type="Label" parent="UI/DialogPopup/Dialog"]
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 295.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.698039, 0.384314, 0.270588, 1)
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "Name"

[node name="Message" type="Label" parent="UI/DialogPopup/Dialog"]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 295.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "Text here ..."
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Response" type="Label" parent="UI/DialogPopup/Dialog"]
layout_mode = 0
offset_left = 5.0
offset_top = 60.0
offset_right = 295.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.839216, 0.764706, 0.462745, 1)
theme_override_fonts/font = ExtResource("5_4dpqf")
theme_override_font_sizes/font_size = 10
text = "Answer"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="UI/DialogPopup" method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="UI/LevelUpPopup/Message/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="dialog_closed" from="UI/DialogPopup" to="." method="_on_dialog_popup_dialog_closed"]
[connection signal="dialog_opened" from="UI/DialogPopup" to="." method="_on_dialog_popup_dialog_opened"]
